hphp/hack/test/typecheck/global_const6.php.exp
File "global_const6.php", line 3, characters 11-15:
Expected constant expression for initializer (Parsing[1002])
File "global_const6.php", line 3, characters 11-15:
Illegal constant value (Naming[2023])
